--- a/src/main/webapp/resources/css/help/request.css
+++ b/src/main/webapp/resources/css/help/request.css
@@ -85,7 +85,6 @@ html, body {
 }
 
 .text-area{
-	height: 70px;
 	margin-bottom: 30px;
 }
 
@@ -93,6 +92,7 @@ html, body {
 	color: rgb(242, 150, 97);
 	font-weight: bolder;
 	margin-bottom: 10px;
+	margin-right: 216px;
 }
 
 .text-input input{
@@ -108,10 +108,6 @@ html, body {
 	border-radius: 5px;
 	border: 2px solid;
 	border-color: rgb(213,213,213);
-}
-
-.submit{
-	margin-top: 100px;
 }
 
 .submit button{
@@ -194,4 +190,25 @@ html, body {
 	font-family: 'Han Sans, 본고딕';
 	font-size: 13px;
 	cursor: pointer;
+}
+
+.button_adress_check{
+    border-radius: 5px;
+    background-color: rgb(52,73,94);
+    border: none;
+    padding: 8px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    width: 71px;
+    color: white;
+}
+
+#address_wrap {
+	display: flex;
+}
+
+#form-address {
+	margin-bottom: 10px;
 }
