--- a/src/main/webapp/resources/css/help/my.css
+++ b/src/main/webapp/resources/css/help/my.css
@@ -87,27 +87,35 @@
 
 .list_btn{
 	width: 70px;
-	height: 25px;
-	border-radius: 5px;
+    height: 24px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bolder;
+    border: 0;
+    box-shadow: 0 2px 2px 1px grey;
 	background-color: rgb(213,213,213);
 }
 .list_btn_red{
 	width: 70px;
-	height: 25px;
-	border-radius: 5px;
-	background-color: lightcoral;
+    height: 24px;
+    border-radius: 5px;
+    background-color: lightcoral;
+    cursor: pointer;
+    font-weight: bolder;
+    color: white;
+    border: 0;
+    box-shadow: 0 2px 2px 1px grey;
 }
 .list_btn_green{
 	width: 70px;
-	height: 25px;
-	border-radius: 5px;
-	background-color: lightgreen;
-}
-.list_btn_blue{
-	width: 70px;
-	height: 25px;
-	border-radius: 5px;
-	background-color: #8080ff;
+    height: 24px;
+    border-radius: 5px;
+    background-color: rgb(60, 179, 113);
+    cursor: pointer;
+    color: white;
+    font-weight: bolder;
+    border: 0;
+    box-shadow: 0 2px 2px 1px grey;
 }
 
 .breakdown{
