--- a/src/main/webapp/resources/css/mypage/modal.css
+++ b/src/main/webapp/resources/css/mypage/modal.css
@@ -17,6 +17,7 @@
 .do_text{
 	width: 65px;
 	height: 29px;
+	cursor: pointer;
 }
 
 .gu_div{
@@ -31,13 +32,14 @@
 .gu_text{
 	width: 108px;
 	height: 28px;
+	cursor: pointer;
 }
 
 .dong_div{
 	height: 100%;
 	width: 100%;
 	display: flex;
-	margin-left: 30px;
+	margin-left: 19px;
 	flex-wrap: wrap;
 	overflow: auto;
 }
@@ -51,8 +53,10 @@
 	align-items: center;
 	margin-right: 25px;
 	border-radius: 5px;
+	margin-bottom: 10px;
 	color: white;
 	font-weight: bold;
-	background-color: rgb(243, 156, 18);;
+	background-color: rgb(243, 156, 18);
+	cursor: pointer;
 	/* text-align: center; */
 }
