--- a/src/main/webapp/resources/css/help/my.css
+++ b/src/main/webapp/resources/css/help/my.css
@@ -69,7 +69,7 @@
 
 .req_list{
 	width: 1100px;
-	height: 200px;
+	height: 330px;
 	margin: 0 0 0 20px;
 	position: relative;
 }
@@ -132,6 +132,40 @@
     font-weight: bolder;
     border: 0;
     box-shadow: 0 2px 2px 1px grey;
+}
+
+.page{
+	width: 300px;
+	height: 50px;
+	position: absolute;
+	bottom: 10px;
+	left: 355px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	font-weight: bold;
+	font-size: 18px;
+}
+
+.page>i{
+	font-size: 25px;
+	color: #cccccc;
+}
+
+.page>i:hover{
+	color: #b3b3b3;
+	cursor: pointer;
+}
+
+.page>div{
+	display: flex;
+	width: 130px;
+	justify-content: space-around;
+}
+
+.page>div>span:hover{
+	color: #bfbfbf;
+	cursor: pointer;
 }
 
 .breakdown{
