--- a/src/main/webapp/resources/css/purchase/purchase-regist.css
+++ b/src/main/webapp/resources/css/purchase/purchase-regist.css
@@ -77,11 +77,6 @@ body {
 	height: 430;
 }
 
-.image-and-appeal-wrapper> #uploaded-image> #product-image {
-	height: 100%;
-	width: 100%;
-}
-
 /* 어필해협, 제품명 등등 title */
 .submit-input-title {
 	width: 100%;
@@ -153,8 +148,52 @@ body {
 	cursor: pointer;
 }
 
+.file{
+	height: 100%;
+	width: 100%;
+	background-color: white;
+	border-radius: 5px;
+	border: 1px solid grey;
+	box-shadow: 2px 2px 5px 1px #666666;
+}
 
+.upload{
+	display: flex;
+	margin-top: 35px;
+	margin-left: 36px;
+	height: 28px;
+	width: 100%;
+}
 
+.uploaded-image{
+	position: relative;
+	height: 310px;
+	width: 340px;
+	border-radius: 2px;
+	margin: 43px 0 0 55px;
+}
+
+.upload_icon{
+	display: flex;
+	align-content: flex-start;
+	font-size: 38px;
+	height: 35px;
+	margin-right: 15px;
+	cursor: pointer;
+}
+
+.upload_label{
+	width: 300px;
+	height: 30px;
+	display: flex;
+	align-items: center;
+	padding-left: 20px;
+	border-radius: 8px;
+	border: 1.8px solid #d9d9d9;
+	font-family: 'Han Sans, 본고딕';
+	font-size: 13px;
+	cursor: pointer;
+}
 
 
 
