--- a/src/main/webapp/resources/css/help/my.css
+++ b/src/main/webapp/resources/css/help/my.css
@@ -120,8 +120,14 @@
     font-weight: bolder;
     color: white;
     border: 0;
+    margin-right: 6px;
     box-shadow: 0 2px 2px 1px grey;
 }
+
+.list_btn_red:hover{
+	box-shadow: inset 0 0 5px 1px #71180e;
+}
+
 .list_btn_green{
 	width: 70px;
     height: 24px;
@@ -131,7 +137,12 @@
     color: white;
     font-weight: bolder;
     border: 0;
+    margin-right: 6px;
     box-shadow: 0 2px 2px 1px grey;
+}
+
+.list_btn_green:hover{
+	box-shadow: inset 0 0 5px 1px #18683a;
 }
 
 .page{
@@ -160,12 +171,22 @@
 .page>div{
 	display: flex;
 	width: 130px;
-	justify-content: space-around;
+	justify-content: center;
 }
 
 .page>div>span:hover{
 	color: #bfbfbf;
 	cursor: pointer;
+}
+
+.page span{
+	display: inline-block;
+	width: 26px;
+	text-align: center;
+}
+
+.page>div>.selected{
+	color: #bfbfbf;
 }
 
 .breakdown{
