--- a/src/main/webapp/resources/css/help/my.css
+++ b/src/main/webapp/resources/css/help/my.css
@@ -92,13 +92,21 @@
 .req_list table{
 	width: 1010px;
 	text-align: center;
+	border-collapse: collapse;
+}
+
+.req_list tr{
+	height: 40px;
 }
 
 .req_list th, .req_list td{
 	border-bottom: 1px solid;
 	border-bottom-color:rgb(213,213,213);
 	height: 35px;
-	 
+}
+
+.help_list>tr:hover{
+	background-color: lightgray;
 }
 
 .list_btn{
@@ -120,8 +128,14 @@
     font-weight: bolder;
     color: white;
     border: 0;
+    margin-right: 6px;
     box-shadow: 0 2px 2px 1px grey;
 }
+
+.list_btn_red:hover{
+	box-shadow: inset 0 0 5px 1px #71180e;
+}
+
 .list_btn_green{
 	width: 70px;
     height: 24px;
@@ -131,7 +145,12 @@
     color: white;
     font-weight: bolder;
     border: 0;
+    margin-right: 6px;
     box-shadow: 0 2px 2px 1px grey;
+}
+
+.list_btn_green:hover{
+	box-shadow: inset 0 0 5px 1px #18683a;
 }
 
 .page{
@@ -160,15 +179,27 @@
 .page>div{
 	display: flex;
 	width: 130px;
-	justify-content: space-around;
+	justify-content: center;
 }
 
 .page>div>span:hover{
-	color: #bfbfbf;
+	color: black;
 	cursor: pointer;
 }
 
+.page span{
+	display: inline-block;
+	width: 26px;
+	text-align: center;
+	color: #bfbfbf;
+}
+
+.page>div>.selected{
+	color: black;
+}
+
 .breakdown{
+	display: none;
 	width: 1030px;
 	height: 800px;
 	margin-bottom: 30px;
