--- a/src/main/webapp/resources/css/purchase/purchase-main.css
+++ b/src/main/webapp/resources/css/purchase/purchase-main.css
@@ -57,7 +57,11 @@ body {
 }
 
 
-
+#title{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
 
 
 /* 여기서부터 toggle switch Css임. w3schools 에서 퍼움*/
@@ -159,23 +163,26 @@ input:checked + .slider:before {
 /* 상품목록 */
 
 .item-list-wrapper {
-	display: flex;
-	flex-direction: column;
+	display: block;
+	width: 1073px;
+	height: 1000px;
 }
 
 .item-list-wrapper> .item-list-line {
 	display: flex;
-	justify-content: space-around;
-	margin-top: 20px;
-	margin-bottom: 20px;
+	justify-content: flex-start;
+	flex-wrap: wrap;
+	margin: 50px 0 20px 5px;
 }
 
 .item-list-line> .item{
 	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: center;
-	height: 250px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 206px;
+    height: 250px;
+    margin: 0 40px 20px 20px;
 }
 
 .item-list-line> .item> .item-image{
