--- a/src/main/webapp/resources/css/help/my.css
+++ b/src/main/webapp/resources/css/help/my.css
@@ -159,6 +159,19 @@
 	box-shadow: inset 0 0 5px 1px #18683a;
 }
 
+.list_btn_disabled{
+	width: 70px;
+    height: 24px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bolder;
+    color: gray;
+    border: 0;
+    margin-right: 6px;
+    box-shadow: 0 2px 2px 1px grey;
+    background: rgba(213,213,213, 0.6);
+}
+
 .page{
 	width: 300px;
 	height: 50px;
