--- a/src/main/webapp/resources/css/purchase/purchase-mypurchase.css
+++ b/src/main/webapp/resources/css/purchase/purchase-mypurchase.css
@@ -103,40 +103,192 @@ body {
 
 
 
+/* 페이징 */
 
-
-
-
-
-
-
-/* 상품목록 페이징 */
-
-.list-paging-wrapper{
-	padding-top: 20px;
-	padding-bottom: 20px;
-	display: flex;
-	justify-content: center;
+.pg_wrap { clear:both; }
+.pg_page { /* 기본페이지 */
+    width:30px !important;
+    height:30px !important;
+    font-size:15px;
+    color:#333;
+    line-height:33px;
+    padding:0;
+    background:#fff;
+    border:0;
+    border-radius:2px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    text-align:center;
+    display:inline-block;
+}
+.pg_page:hover {
+    background:#f2f2f2;
+}
+.pg_current { /* 현재페이지 */
+    width:30px !important;
+    height:30px !important;
+    font-size:15px;
+    color:#fff;
+    font-weight:normal;
+    line-height:33px;
+    margin:0;
+    padding:0;
+    background:#333;
+    border:0;
+    border-radius:2px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    text-align:center;
+    display:inline-block;
 }
 
-.list-paging-wrapper> .list-paging {
-	width: 150px;
-	display: flex;
-	justify-content: space-between;
-	font-size: 20px;
-	
+.pg_prev { /* 이전 */
+    position:relative;
+    top:50%;
+    width:28px !important;
+    height:28px !important;
+    background:#fff;
+    border:1px solid #ccc;
+    border-radius:2px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    text-indent:-9999px;
+    display:inline-block;
+}
+.pg_prev:after {
+    position:absolute;
+    top:10px;
+    left:13px;
+    content:"";
+    width:6px;
+    height:6px;
+    border-top:1px solid transparent;
+    border-right:1px solid transparent;
+    border-bottom:1px solid #777;
+    border-left:1px solid #777;
+    transform:rotate(45deg);
+}
+.pg_prev:hover {
+    background:#fff;
+    border:1px solid #333;
+}
+.pg_next { /* 다음 */
+    position:relative;
+    top:50%;
+    width:28px !important;
+    height:28px !important;
+    background:#fff;
+    border:1px solid #ccc;
+    border-radius:2px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    text-indent:-9999px;
+    display:inline-block;
+}
+.pg_next:after {
+    position:absolute;
+    top:10px;
+    right:13px;
+    content:"";
+    width:6px;
+    height:6px;
+    border-top:1px solid #777;
+    border-right:1px solid #777;
+    border-bottom:1px solid transparent;
+    border-left:1px solid transparent;
+    transform:rotate(45deg);
+}
+.pg_next:hover {
+    background:#fff;
+    border:1px solid #333;
 }
 
-/* 페이징 처리 호버이벤트 */
-
-.list-paging-wrapper> .list-paging> div{
-	font-weight: bold;
-	transition: all 0.2s;
-	color: #868686;
+.pg_start { /* 처음 */
+    position:relative;
+    top:50%;
+    width:28px !important;
+    height:28px !important;
+    background:#fff;
+    border:1px solid #ccc;
+    border-radius:2px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    text-indent:-9999px;
+    display:inline-block;
+}
+.pg_start:after {
+    position:absolute;
+    top:10px;
+    left:10px;
+    content:"";
+    width:6px;
+    height:6px;
+    border-top:1px solid transparent;
+    border-right:1px solid transparent;
+    border-bottom:1px solid #777;
+    border-left:1px solid #777;
+    transform:rotate(45deg);
+}
+.pg_start:before {
+    position:absolute;
+    top:10px;
+    left:16px;
+    content:"";
+    width:6px;
+    height:6px;
+    border-top: 1px solid transparent;
+    border-right: 1px solid transparent;
+    border-bottom: 1px solid #777;
+    border-left: 1px solid #777;
+    transform:rotate(45deg);
+}
+.pg_start:hover {
+    background:#fff;
+    border:1px solid #333;
 }
 
-.list-paging-wrapper> .list-paging> div:hover{
-	color: #3498db;
+.pg_end { /* 맨끝 */
+    position:relative;
+    top:50%;
+    width:28px !important;
+    height:28px !important;
+    background:#fff;
+    border:1px solid #ccc;
+    border-radius:2px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    text-indent:-9999px;
+    display:inline-block;
+}
+.pg_end:after {
+    position:absolute;
+    top:10px;
+    right:10px;
+    content:"";
+    width:6px;
+    height:6px;
+    border-top:1px solid #777;
+    border-right:1px solid #777;
+    border-bottom:1px solid transparent;
+    border-left:1px solid transparent;
+    transform:rotate(45deg);
+}
+.pg_end:before {
+    position:absolute;
+    top:10px;
+    right:16px;
+    content:"";
+    width:6px;
+    height:6px;
+    border-top:1px solid #777;
+    border-right:1px solid #777;
+    border-bottom:1px solid transparent;
+    border-left:1px solid transparent;
+    transform:rotate(45deg);
+}
+.pg_end:hover {
+    background:#fff;
+    border:1px solid #333;
 }
 
 
