--- a/src/main/webapp/resources/css/purchase/purchase-request.css
+++ b/src/main/webapp/resources/css/purchase/purchase-request.css
@@ -5,6 +5,7 @@ html {
 	min-width: 1130px;
 	display: flex;
 	justify-content: center;
+	overflow-x: hidden;
 }
 
 body {
@@ -175,7 +176,12 @@ body {
 
 
 
-
+.alertMessage {
+	text-align:center;
+	vertical-align: top;
+	font-size: 20px;
+	font-weight: bold;
+}
 
 
 /* 섹션 끝 */
