--- a/src/main/webapp/resources/css/purchase/purchase-detail.css
+++ b/src/main/webapp/resources/css/purchase/purchase-detail.css
@@ -6,6 +6,7 @@ html {
 	min-width: 1130px;
 	display: flex;
 	justify-content: center;
+	overflow-x: hidden;
 }
 
 body {
@@ -196,7 +197,12 @@ body {
 	padding-left: 40px;
 }
 
-
+.alertMessage {
+	text-align:center;
+	vertical-align: top;
+	font-size: 20px;
+	font-weight: bold;
+}
 
 /* 섹션 끝 */
 
